<?xml version="1.0"?>
<package format="2">
  <name>move_control</name>
  <version>0.0.0</version>
  <description>The move_control package</description>

  <maintainer email="keten@todo.todo">keten</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>move_base</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>move_base</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>tf2_geometry_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>tf</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>signal_handler</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

  <!-- Optional: TurtleBot3 Gazebo sim + relay + teleop + rosbag (see launch/sim_tb3_*.launch) -->
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>rosbag</exec_depend>

</package>
